# vue-django-app

backend/: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  conftest.py  dev-requirements.txt  fabfile.py  package.json  pytest.ini  reflection.md  requirements.txt  setup.cfg  tech-specs.md  test-requirements.txt  test_zappa_handler.py  zappa_settings.json
backend/api_v1/: pagination.py  urls.py
backend/app_settings/: abstracts.py  admin.py  dashboard.py  mixins.py  models.py  serializers.py  utils.py  views.py  viewsets.py
backend/authentication_user/: admin.py  apps.py  choices.py  managers.py  mixins.py  models.py  permissions.py  querysets.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py  viewsets.py
backend/backend/: __init__.py  celery.py  config.py  env.tmpl.py  urls.py
backend/billing/: models.py  serializers.py  urls.py  utils.py  views.py
backend/calendar_manager/: admin.py  apps.py  fields.py  filters.py  gcalendar.py  mixins.py  models.py  serializers.py  tasks.py  tasks.py.orig  utils.py  viewsets.py
backend/conf/: Caddyfile  easy_flower.conf  easy_nginx.conf  easy_preiodic_task.conf  easy_supervisor.ini  easy_uwsgi.conf  install.sh
backend/customers/: admin.py  models.py  serializers.py  viewsets.py
backend/embed_page/: apps.py  urls.py  views.py
backend/lexbot/: README.md  __init__.py  apps.py  decorators.py  models.py  msgs.py  ravenclient.py  serializers.py  signals.py  urls.py  utils.py  views.py  viewsets.py
backend/mailer/: forms.py  ses_bounce_handler.py  tasks.py  urls.py  (+2 more)
(+338 files in other folders)
