[options]
install_requires = 
	awscli~=1.16.40
	chargebee~=2.6.0
	coreapi~=2.3
	django-cors-headers~=2.3
	django-dbbackup~=3.2
	django-extensions~=2.0
	django-filter~=2.0.0
	django-mysql~=2.3
	django-phonenumber-field~=2.0
	django-queryinspect~=1.0
	django-s3-storage~=0.12.4
	django-ses~=0.8.5
	django-smoke-tests~=0.4.1
	django-storages~=1.6
	django-twilio~=0.9.0
	django-utils-plus~=0.6.6
	django<2,>=1.11
	djangorestframework-jwt~=1.11
	djangorestframework~=3.8
	google-api-python-client~=1.7
	itsdangerous~=1.1.0
	jsonpickle~=0.9.6
	mysqlclient~=1.3.13
	oauth2client~=4.1
	phonenumberslite~=8.9.16
	proofread~=0.1.2
	pusher~=2.0.2
	pynamodb~=3.3.1
	raven-python-lambda~=0.1.8
	raven~=6.9
	SpeechRecognition~=3.8
	twilio~=6.14
	typing~=3.6
	vobject~=0.9.5
	zappa~=0.47.0
	repo~=0.1.0
	url~=0.4.2

[options.extras_require]
dev = 
	awslogs~=0.10.0
	better-exceptions~=0.2.1
	Fabric3~=1.14
	ipython~=7.1.1
	tqdm~=4.19.1
	Werkzeug~=0.14.1
	whitenoise~=4.1
testing = 
	django-admin-smoke-tests-2~=0.3.1
	django-smoke-tests~=1.0.1
	Faker~=0.8.16
	model-mommy~=1.6
	pytest-cov~=2.5
	pytest-django~=3.3
	pytest-env~=0.6.2
	pytest-monkeytype~=1.0
	pytest-sugar~=0.9.2
	pytest~=3.10.0

